--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ ul, li {
     padding: 30px;
     background-repeat: no-repeat;
     background-position: center center;
+    background-size: cover;
 }
 
 .header__content-inner {
@@ -147,6 +148,7 @@ img {
     font-size: 14px;
     line-height: 30px;
     font-family: Asul, sans-serif;
+    transition: 0.3s ease;
 }
 
 .navigation li + li {
@@ -162,15 +164,60 @@ img {
     padding: 0px 15px;
     transition: all 0.3s ease 0s;
 }
-
+.snip li {
+    display: inline-block;
+    list-style: outside none none;
+    margin: 0 1.5em;
+    padding: 0;
+  }
+.snip a {
+    padding: 0.1em 0;
+    color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    letter-spacing: 1px;
+    text-decoration: none;
+}
+.snip a:before,
+.snip a:after {
+    position: absolute;
+    -webkit-transition: all 0.35s ease;
+    transition: all 0.35s ease;
+}
+.snip a:before {
+    bottom: 0;
+    display: block;
+    height: 3px;
+    width: 0%;
+    content: "";
+    background-color: #ff4081;
+}
+.snip a:after {
+    left: 0;
+    top: 0;
+    padding: 0.1em 0;
+    position: absolute;
+    content: attr(data-hover);
+    color: #ffffff;
+    white-space: nowrap;
+    max-width: 0%;
+    overflow: hidden;
+}
+.snip a:hover:before,
+.snip .current a:before {
+    opacity: 1;
+    width: 100%;
+}
+.snip a:hover:after,
+.snip .current a:after {
+    max-width: 100%;
+}
 
 .wrap.active{
-    width: 250px;
+    width: 240px;
     padding-left: 25px;
     transition: all 0.5s ease;
 }
 
-<<<<<<< HEAD
 .input.active{
     width: 98%;
     padding-left: 5px;
@@ -180,7 +227,7 @@ img {
 input::placeholder {
     color: #fff;
 }
-.search {
+.search__header {
     position: relative;
     display: flex;
     margin: 10px auto;
@@ -190,7 +237,7 @@ input::placeholder {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-85%, -50%);
+    transform: translate(-65%, -50%);
     width: 0px;
     height: 40px;
     line-height: 40px;
@@ -201,7 +248,7 @@ input::placeholder {
     transition: all 0.5s ease 0s;
 }
 
-.search form {
+.search_header form {
     position: absolute;
 }
 
@@ -234,7 +281,7 @@ input::placeholder {
     cursor: pointer;
 }
 
-.fa-search:before {
+.fa-search__header:before {
     content: "\f002";
 }
 
@@ -278,6 +325,11 @@ input::placeholder {
     border-image: initial;
     padding: 10px 20px;
 }
+
+.slider__text3 button:hover {
+    background-color: rgba(146, 216, 251, 0.707);
+    border: 1px solid  rgba(146, 216, 251, 0.707) ;
+}
 .category__content {
     display: flex;
 }
@@ -317,6 +369,10 @@ input::placeholder {
     border-image: initial;
     border-radius: 30px;
     padding: 0px 30px;
+}
+.sort a:hover {
+    border: 1px solid #3f51b5;
+    color: #3f51b5;
 }
 
 .main {
@@ -386,8 +442,6 @@ main {
     padding: 2px 0px 0px 10px;
 }
 
-=======
->>>>>>> 65d22477d7bd0128ef6b4d9ccabf52c4cfe5537a
 .date {
     font-size: 12px;
     line-height: 27px;
@@ -431,10 +485,122 @@ main {
     background-color: rgb(255, 255, 255);
     margin: 0px 20px 0px 0px;
 }
-<<<<<<< HEAD
+
+.main__content {
+    display: flex;
+}
+
+.main__services {
+    margin: 20px;
+    background-color: #fff;
+    height: 100%;
+}
+
+.search_services input{
+    border-radius: 50px;
+    background-color: #f5f5f5;
+    border: none;
+    padding: 10px 20px;
+    outline: none;
+    color: #b4b4b4;
+}
 
 
+.search_services {
+    padding: 10px 40px;
+    position: relative;
+}
+.search_services input[type="text"] {
+    width: 100%;
+    background-color: #f5f5f5;
+    outline: none; /* Убираем свечение в Chrome и Safari */
+    -webkit-appearance: none; /* Убираем рамку в Chrome и Safari */
+    border: none; 
+    
+}
+.search_services input::placeholder {
+    color:#b4b4b4;
+}
 
+.search_services input[type="submit"] {
+    font-size: 23px;
+    border: none;
+    cursor: pointer;
+    background: url(../images/search.png) no-repeat 50% 50%; /* Параметры фона */
+    outline: none;
+    padding: 0 0 10px 30px;
+}
+.search_services input[type="submit"] {
+    position: absolute;
+    background-image: url(../images/search.png);
+    top: 14px;
+    right: 50px;
+    height: 30px;
+    
+}
 
-=======
->>>>>>> 65d22477d7bd0128ef6b4d9ccabf52c4cfe5537a
+.categories {
+    font-weight: bold;
+    font-family: Montserrat, sans-serif !important;
+    color: #3f51b5;
+    padding: 10px 40px;
+    
+}   
+
+.title_categories {
+    text-transform: uppercase;
+    border-bottom: 1px solid #3f51b5;
+    padding: 10px 0px;
+}
+
+.some_categories li> a {
+    list-style: none;
+    color: #404040;
+    padding: 20px 0px 15px;
+    font-family: "Open Sans", sans-serif;
+}
+.some_categories li {
+    border-bottom: 1px solid black;
+}
+
+.subcribe {
+    font-weight: bold;
+    font-family: Montserrat, sans-serif !important;
+    color: #3f51b5;
+    padding: 40px 40px;
+}
+
+.title_subcribe {
+    text-transform: uppercase;
+    border-bottom: 1px solid #3f51b5;
+    padding: 10px 0px;
+}
+
+.subcribe_input {
+    margin: 15px 0px 15px;
+    color: #404040;
+    font-family: "Open Sans", sans-serif;
+}
+.subcribe_input input {
+    border:1px solid #e0e0e0;
+    margin: 15px 0px 15px;
+    width: 270px;
+    height: 45px;
+    border-radius: 10px;
+    padding: 10px;
+    outline: none;
+    color: #b4b4b4;
+}
+.subcribe_input input::placeholder {
+    color: #e0e0e0;
+}
+
+.subcribe_input input[type="submit"] {
+    background-color:#3f51b5 ;
+    color: #ffffff;
+    background-color:#3f51b5 ;
+   cursor: pointer;
+    font-family: Montserrat, sans-serif !important;
+    font-size: 18px;
+    text-transform: uppercase;
+}
