--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ ul, li {
 .header__social {
     color: rgb(142, 142, 142);
     line-height: 40px;
+    display: block;
 }
 
 .fb::before {
@@ -118,6 +119,20 @@ ul, li {
     color: rgb(142, 142, 142);
     font-family: icomoon !important;
 }
+
+.modal {
+    position: static;
+    margin: auto
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
 .language::before {
     content: "";
     font-size: 16px;
@@ -264,9 +279,6 @@ input::placeholder {
     font-style: italic;
     position: relative;
     border-width: 0px;
-    border-style: initial;
-    border-color: initial;
-    border-image: initial;
     background: transparent;
     outline: none;
     transition: all 0.3s ease 0s;
@@ -382,15 +394,11 @@ input::placeholder {
 main {
     display: block;
 }
-
-.main__content-item {
-    padding: 20px 0px 0px;
+.news__horizontally div.main__content-item {
+    margin: 0px 10px;
 }
-
 .lifestyle {
     display: flex;
-    max-width: 820px;
-    height: 165px;
     background-color: rgb(255, 255, 255);
 }
 
@@ -407,7 +415,12 @@ main {
     font-family: Montserrat, sans-serif !important;
 }
 
-
+.image img {
+    height: 100%;
+}
+.lifestyle div.image img {
+    max-width: 250px;
+}
 .description {
     font-size: 14px;
     line-height: 21px;
@@ -457,22 +470,27 @@ main {
     color: rgb(64, 64, 64);
     display: flex;
     font-family: Montserrat, sans-serif !important;
-    padding: 19px 20px 0px;
+    padding: 20px 20px 0px;
 }
-.vertically {
+.news__vertically {
     display: flex;
     flex-wrap: wrap;
 }
 
 .main__content-item {
     padding: 20px 0px 0px;
+    display: flex;
+}
+
+.news__vertically div.main__content-item {
+    padding: 10px 0px 0px;
 }
 
 .lifestyle_vertically {
-    width: 400px;
-    height: 540px;
+    max-width: 400px;
+    height: 530px;
     background-color: rgb(255, 255, 255);
-    margin: 0px 20px 0px 0px;
+    margin: 5px 10px;
 }
 
 .main__content__type-3 {
@@ -483,7 +501,7 @@ main {
     width: 260px;
     max-height: 540px;
     background-color: rgb(255, 255, 255);
-    margin: 0px 20px 0px 0px;
+    margin: 0px 10px 0px 10px;
 }
 
 .main__content {
@@ -521,6 +539,7 @@ main {
 .search_services input::placeholder {
     color:#b4b4b4;
 }
+
 
 .search_services input[type="submit"] {
     font-size: 23px;
@@ -599,8 +618,12 @@ main {
     background-color:#3f51b5 ;
     color: #ffffff;
     background-color:#3f51b5 ;
-   cursor: pointer;
+    cursor: pointer;
     font-family: Montserrat, sans-serif !important;
     font-size: 18px;
     text-transform: uppercase;
+}
+ input[type="submit"] .btn_subcribe:hover {
+    background-color: rgba(146, 216, 251, 0.707);
+    border: 1px solid  rgba(146, 216, 251, 0.707) 
 }
