--- a/css/media.css
+++ b/css/media.css
@@ -11,18 +11,18 @@
     .header__content-inner {
         justify-content: space-evenly;
     }   
-    .news__horizontally {
+    .news__type-a {
         width: 95%;
         margin: auto;
    }
-   .news__vertically {
+   .news__type-b {
         max-width: 840px;
         margin: auto;
    }
-   .main__content__type-3 {
+   .news__type-c {
         justify-content: center;
         flex-wrap: wrap;
-}
+    }
 }
 
 @media (max-width: 1300px) {
@@ -36,10 +36,10 @@
 }
 
 @media (max-width: 870px) {
-    .news__vertically {
+    .news__type-b {
         display: block;
     }
-    .news__vertically div.main__content-item {
+    .news__type-b div.main__content-item {
         justify-content: center;
     }
     .lifestyle_vertically {
@@ -59,8 +59,9 @@
         padding: 20px 20px 10px;
     }
 }
+
 @media (max-width: 870px) {
-    .main__content__type-3 {
+    .news__type-c {
         justify-content: center;
         flex-wrap: wrap;
     }
@@ -71,8 +72,9 @@
         height: 100%;
     }
 }
+
 @media (max-width: 595px) {
-    /* .news__horizontally div.main__content-item {
+    /* .news__type-a div.main__content-item {
         flex-direction: column;
     } */
     .lifestyle {
@@ -83,30 +85,58 @@
         width: 100%;
         max-width: 350px;
     }
-   .news__horizontally div.main__content-item {
+   .news__type-a div.main__content-item {
        justify-content: center;
    }
-   
 }
 
-
-@media (max-width: 570px) {
+@media (max-width: 595px) {
     .lifestyle_vertically {
+        width: 100%;
         max-width: 350px;
     }
     .lifestyle_vertically div.image {
-        max-height: 350px;
+        width: 100%;
+         max-width: 350px;
+        max-height: 300px;
     }
     .lifestyle_vertically img {
+        
         max-width: 350px;
     }
     .lifestyle__type-3 {
         width: 350px;
     }
     .lifestyle__type-3 div.image {
-        width: 350px;
         max-width: 350px;
         height: 216px;
+    }  
+}
+
+@media (max-width: 430px) {
+    .lifestyle_vertically {
+        width: 100%;
+        max-width: 280px;
+    }
+    .lifestyle_vertically img {
+        max-width: 280px;
+    }
+    .lifestyle_vertically div.image {
+        max-height: 230px;
+    }
+    .lifestyle {
+        width: 100%;
+        max-width: 280px;
+    }
+    .lifestyle img {
+        max-width: 280px;
+    }
+    .lifestyle__type-3 {
+        width: 100%;
+        max-width: 280px;
+    }
+    .lifestyle__type-3 img {
+        max-width: 280px;
     }
     
 }
